# pyrdma

./: .gitignore  CMakeLists.txt  MANIFEST.in  README.md  setup.py
examples/: rdma_bandwidth_test.py  test_pyrdma.py  test_wheel.py
examples/rdma/: client.cpp  client_send_recv.cpp  server.cpp  server_send_recv.cpp
examples/tcp/: test_tcp_client.cpp  test_tcp_server.cpp
hack/: build.sh  build_whl.sh  ln.sh  run_tcp_test.sh
src/: CMakeLists.txt  communicator.h  pyrdma.cpp  rdma_communicator.cpp  rdma_communicator.h  tcp_communicator.cpp  tcp_communicator.h
